@@ -452,6 +452,9 @@
     <ClInclude Include="CustomMFCRibbonStatusBar.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\Utils\DpiScale.h">
+      <Filter>Utils\Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\Resources\download.avi">
